# dlbench

./: .gitignore  README.md  dlbench.py  pyproject.toml  testproc.sh
src/dlbench/: __main__.py  bench.py  cli.py
