[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlbench"]

[project]
name = "dlbench"
version = "2024.12.09"
description = "Benchmark monitor for datalog engines"
dependencies = ["matplotlib", "pandas", "psutil"]
requires-python = ">=3.10"
authors = [{ name = "srinskit", email = "srinskit@protonmail.com" }]
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]

[project.scripts]
dlbench = "dlbench.cli:main"

[project.urls]
Homepage = "https://github.com/srinskit/dlbench"
